--- a/components/like/index.wxss
+++ b/components/like/index.wxss
@@ -1,5 +1,24 @@
 /* components/like/index.wxss */
-.container{
+
+.container {
+    /* display: flex; 会取消子元素的块级属性 */
+    display: inline-flex;
+    flex-direction: row;
+    padding: 10rpx;
+    width: 90rpx;
+}
+
+.container image {
     width: 32rpx;
     height: 28rpx;
+}
+
+.container text {
+    /* font-family: "PingFangSC-Thin" */
+    font-size: 24rpx;
+    line-height: 24rpx;
+    color: #ddd;
+    position: relative;
+    bottom: 10rpx;
+    left: 6rpx;
 }
