--- a/pages/classic/classic.wxss
+++ b/pages/classic/classic.wxss
@@ -1,32 +1,32 @@
-/* pages/classic/classic.wxss */
-
 .container {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.header {
+    display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: baseline;
-    background: #999;
-    /* height: 400px; */
+    height: 100rpx;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    border-top: 1px solid #f5f5f5;
+    border-bottom: 1px solid #f5f5f5;
 }
 
-.chunk {
-    /* flex: 1; */
-    height: 100px;
-    width: 100px;
+.epsoide {
+    margin-left: 20rpx;
+    margin-top: 4rpx;
 }
 
-.color1 {
-    background: forestgreen;
-    font-size: 12px;
+.like {
+    margin-top: 6rpx;
 }
 
-.color2 {
-    background: greenyellow;
-    font-size: 22px;
-}
+.navi {
+    position: absolute;
+    bottom: 40rpx;
 
-.color3 {
-    background: blanchedalmond;
-    font-size: 42px;
 }
