--- a/pages/book/book.wxml
+++ b/pages/book/book.wxml
@@ -1,2 +1,18 @@
-<!--pages/book/book.wxml-->
-<text>pages/book/book.wxml</text>
+<!-- pages/book/book.wxml -->
+<!-- item 引用循环中的一项 可以使用 wx:for-item="book" 指定别名 -->
+<view class="container">
+    <view class="header">
+        <view class="box">
+            <image src="/images/icon/search.png" />
+            <text>搜索书籍</text>
+        </view>
+    </view>
+    <view class="sub-container">
+        <image class='head-img' src="/images/book/quality.png" />
+        <view class="books-container">
+            <block wx:for="{{books}}" wx:key="id">
+                <v-book book='{{item}}'></v-book>
+            </block>
+        </view>
+    </view>
+</view>
