--- a/pages/book/book.wxss
+++ b/pages/book/book.wxss
@@ -1,1 +1,69 @@
-/* pages/book/book.wxss */
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.header {
+    position: fixed;
+    background: #ffffff;
+    width: 100%;
+    height: 100rpx;
+    border-top: 1px solid #f5f5f5;
+    border-bottom: 1px solid #f5f5f5;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: 0 0 3px 0 #e3e3e3;
+    z-index: 99;
+
+}
+
+.box {
+    height: 70rpx;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50rpx;
+    background: #f5f5f5;
+    margin: 0 50rpx;
+}
+
+.box image {
+    width: 28rpx;
+    height: 28rpx;
+    margin-right: 10rpx;
+    margin-bottom: -2rpx;
+}
+
+.sub-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #f5f5f5;
+    padding-top: 100rpx;
+
+}
+
+.head-img {
+    width: 106rpx;
+    height: 34rpx;
+    margin-top: 40rpx;
+}
+
+.books-container {
+    margin-top: 10rpx;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 0 90rpx;
+    width: 600rpx;
+}
+
+.books-container v-book {
+    margin-bottom: 10rpx;
+}
