--- a/components/tag/index.wxml
+++ b/components/tag/index.wxml
@@ -1,4 +1,7 @@
 <!-- components/tag/index.wxml -->
-<view>
-    <text>{{text}}</text>
+<view class="container tag-class" bind:tap="onTap">
+    <slot name="before"></slot>
+    <text class="tag">{{text}}</text>
+    <!-- <text class="number">{{num}}</text> -->
+    <slot name="after"></slot>
 </view>
