--- a/pages/book-detail/book-detail.wxss
+++ b/pages/book-detail/book-detail.wxss
@@ -39,14 +39,163 @@
     padding: 30rpx;
 }
 
-.headlin {
+.headline {
     font-size: 30rpx;
     font-weight: 600;
     color: #2f2f2f;
     margin-bottom: 20rpx;
 }
 
-.sub-container{
+.sub-container {
     display: flex;
-    
+
+}
+
+.comment-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.comment-container v-tag {
+    margin-right: 15rpx;
+    margin-bottom: 10rpx;
+}
+
+.num {
+    margin-left: 10rpx;
+    font-size: 22rpx;
+    color: #aaaaaa;
+}
+
+/* 选择列表的第一个元素 */
+/* .comment-container>v-tag:nth-child(1)>view {
+    background: #fffbdd !important;
+}
+
+.comment-container>v-tag:nth-child(2)>view {
+    background: #eefbff !important;
+} */
+
+.ex-tag0 {
+    background: #fffbdd !important;
+}
+
+.ex-tag1 {
+    background: #eefbff !important;
+}
+
+.ex-tag {
+    /* background: #fffbdd !important; */
+}
+
+.content {
+    text-indent: 50rpx;
+    font-weight: 500;
+}
+
+.detail_container {
+    display: flex;
+    width: 100%;
+    margin-bottom: 100rpx;
+    color: #666666;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+.vertical {
+    display: flex;
+    flex-direction: column;
+}
+
+.description {
+    margin-right: 50rpx;
+    color: #999999
+}
+
+
+.post-container {
+    height: 100rpx;
+    width: 690rpx;
+    box-shadow: 1px -1px 1px #e3e3e3;
+    position: fixed;
+    background: #ffffff;
+    bottom: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0 30rpx;
+    justify-content: space-between;
+    z-index: 1;
+}
+
+.post-fake {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 60rpx;
+    width: 460rpx;
+    border-radius: 25rpx;
+    border: #999999 solid 1px;
+    color: black;
+    padding-left: 20rpx;
+    font-size: 24rpx;
+}
+
+.like-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.like {
+    margin-right: 30rpx;
+    margin-top: 10rpx;
+}
+
+.posting-container {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background: #ffffff;
+    z-index: 100;
+}
+
+.cancel {
+    color: #666666;
+}
+
+.post-header {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+
+}
+
+.post-header text {
+    padding: 25rpx;
+}
+
+.post-header>text:first-child {
+    font-size: 28rpx;
+    color: #bbbbbb;
+}
+
+.posting-container .comment-container {
+    width: 690rpx;
+    padding: 40rpx 30rpx 0 30rpx;
+}
+
+.post {
+    width: 690rpx;
+    margin: 30rpx auto;
+    height: 56rpx;
+    background: #f5f5f5;
+    border-radius: 15rpx;
+    padding-left: 25rpx;
+}
+
+.shadow {
+    color: #999;
 }
