--- a/components/search/index.wxml
+++ b/components/search/index.wxml
@@ -1,2 +1,44 @@
-<!--components/search/index.wxml-->
-<text>components/search/index.wxml</text>
+<view class="container">
+    <view class="header">
+        <view class="search-container">
+            <image class="icon" src="images/search.png" />
+            <input value="{{keyword}}" bindconfirm="onConfirm" placeholder-class="in-bar" placeholder="书籍名" class="bar" auto-focus="{{true}}" />
+            <image bind:tap="onClear" class="cencel-img" src="images/cancel.png" />
+        </view>
+        <view bind:tap="onCancel" class="cancel">取消</view>
+    </view>
+    <!-- 搜索记录,热门搜索 -->
+    <view wx:if="{{!searching}}">
+        <view class="history">
+            <view class="title">
+                <view class="chunk"></view>
+                <text>历史搜索</text>
+            </view>
+            <view class="tags">
+                <block wx:for="{{historyWords}}" wx:key="index">
+                    <v-tag bind:onTap="onConfirm" text="{{item}}" class="num"></v-tag>
+                </block>
+            </view>
+        </view>
+        <view class="history hot-search">
+            <view class="title">
+                <view class="chunk"></view>
+                <text>热门搜索</text>
+            </view>
+            <view class="tags">
+                <block wx:for="{{hotWords}}" wx:key="index">
+                    <v-tag bind:onTap="onConfirm" text="{{item}}" class="num"></v-tag>
+                </block>
+            </view>
+        </view>
+    </view>
+    <!-- 搜索结果展示 -->
+    <view wx:if="{{searching}}" class="books-container">
+        <block wx:for="{{dataArray}}" wx:key="{{item.id}}">
+            <v-book book='{{item}}'></v-book>
+        </block>
+    </view>
+    <v-loading class="loading-center"></v-loading>
+    <v-loading class="loading" wx:if="{{loading}}"></v-loading>
+    <text class="empty-tip" wx:if="{{noneResult}}">没有搜索到书籍</text>
+</view>
