--- a/components/search/index.wxss
+++ b/components/search/index.wxss
@@ -1,1 +1,117 @@
-/* components/search/index.wxss */
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.header {
+    height: 100rpx;
+    width: 100%;
+    display: flex;
+    position: fixed;
+    top: 0;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    z-index: 99;
+    background: #ffffff;
+}
+
+.search-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex: 1;
+    height: 70rpx;
+    border-radius: 20rpx;
+    background: #f5f5f5;
+    margin-left: 20rpx;
+}
+
+.bar {
+    flex: 1;
+}
+
+.icon {
+    width: 28rpx;
+    height: 28rpx;
+    padding: 10rpx 20rpx;
+}
+
+.in-bar {}
+
+.cencel-img {
+    width: 24rpx;
+    height: 24rpx;
+    padding: 10rpx 20rpx;
+}
+
+.cancel {
+    padding: 0 20rpx;
+}
+
+.history {
+    display: flex;
+    flex-direction: column;
+    padding-top: 100rpx;
+}
+
+.hot-search {
+    padding-top: 0rpx;
+}
+
+.chunk {
+    height: 24rpx;
+    border-left: black 10rpx solid;
+    margin-left: 20rpx;
+    margin-right: 20rpx;
+
+}
+
+.title {
+    display: flex;
+    flex-direction: row;
+    align-items: center
+}
+
+.tags {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 20rpx;
+}
+
+.tags v-tag {
+    margin-right: 15rpx;
+    margin-bottom: 10rpx;
+}
+
+.num {
+    margin-left: 10rpx;
+    font-size: 22rpx;
+    color: #aaaaaa;
+}
+
+.books-container {
+    margin-top: 10rpx;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 0 90rpx;
+    width: 600rpx;
+    padding-top: 100rpx;
+}
+
+.books-container v-book {
+    margin-bottom: 10rpx;
+}
+
+.loading-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
+.loading {}
