--- a/pages/book/book.wxml
+++ b/pages/book/book.wxml
@@ -1,8 +1,8 @@
 <!-- pages/book/book.wxml -->
 <!-- item 引用循环中的一项 可以使用 wx:for-item="book" 指定别名 -->
-<view class="container">
+<view wx:if="{{!searching}}" class="container">
     <view class="header">
-        <view class="box">
+        <view class="box" bind:tap="onSearch">
             <image src="/images/icon/search.png" />
             <text>搜索书籍</text>
         </view>
@@ -16,3 +16,4 @@
         </view>
     </view>
 </view>
+<v-search bind:onCancel="onCancel" more="{{more}}" wx:if="{{searching}}"></v-search>
