--- a/components/loading/index.wxss
+++ b/components/loading/index.wxss
@@ -2,14 +2,15 @@
     width: 40rpx;
     height: 40rpx;
     position: relative;
-    background: red;
+    /* margin: 100px auto; */
 }
 
-.double-bounce1 .double-bounce2 {
+.double-bounce1,
+.double-bounce2 {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background: #3063b2;
+    background-color: #3063b2;
     opacity: 0.6;
     position: absolute;
     top: 0;
@@ -20,20 +21,8 @@
 }
 
 .double-bounce2 {
-    animation-delay: -1s;
-    -webkit-animation-delay: -1s;
-}
-
-@keyframes bounce {
-
-    0%,
-    100% {
-        transform: scale(0.0)
-    }
-
-    50% {
-        transform: scale(1.0)
-    }
+    -webkit-animation-delay: -1.0s;
+    animation-delay: -1.0s;
 }
 
 @-webkit-keyframes bounce {
@@ -45,5 +34,19 @@
 
     50% {
         -webkit-transform: scale(1.0)
+    }
+}
+
+@keyframes bounce {
+
+    0%,
+    100% {
+        transform: scale(0.0);
+        -webkit-transform: scale(0.0);
+    }
+
+    50% {
+        transform: scale(1.0);
+        -webkit-transform: scale(1.0);
     }
 }
