--- a/components/search/index.wxss
+++ b/components/search/index.wxss
@@ -111,7 +111,17 @@
 .loading-center {
     position: absolute;
     top: 50%;
-    left: 50%;
+    /* left: 50%; */
 }
 
-.loading {}
+.loading {
+    margin: 100rpx;
+}
+
+.empty-tip {
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+}
